fix counter and Key input in orca_tool
ocra_tool.c :
- in init: improve key input validation (fail on all non-hexadecimal characters)
- in init: accept initial counter values from the whole
  counter range (64bit),  initial counter values can be given
  as hexadecimal numbers
- in info: print the correct counter value for counters > 0xffffffff

rfc6287.c, rfc6287.h:
- remove parse_num() from rfc6287 API

--- a/ocra_tool/ocra_tool.8
+++ b/ocra_tool/ocra_tool.8
@@ -26,7 +26,7 @@
 .\" SUCH DAMAGE.
 .\"
 .\"
-.Dd September 30, 2014
+.Dd October 4, 2014
 .Dt OCRA_TOOL 8
 .Os
 .Sh NAME
@@ -79,7 +79,9 @@ If the
 .Ar suite_string
 requires a counter parameter,
 .Ar counter
-is the initial counter value.
+is the initial counter value. If
+.Ar counter
+begins with '0x' it will be interpreted as hexadecimal number.
 .It Fl p Ar pin
 If the
 .Ar suite_string
