--- a/ocra_tool/ocra_tool.8
+++ b/ocra_tool/ocra_tool.8
@@ -167,6 +167,10 @@ counter:        0x000000000000000a
 counter_window: 50
 .sp 0
 pin_hash:       0x7110eda4d09e062aa5e4a390b0a572ac0d2c0220
+.sp 0
+kill_pin_hash:  NOT SET
+.sp 0
+kill pin used:  false
 .Lp
 .Sh FILES
 .Bl -tag -width Ds -compact
