--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+libpam-ocra (1.6) unstable; urgency=low
+
+  * support OpenSSL 3.0
+
+
+ -- Stefan Grundmann <sg2342@googlemail.com>  Thu, 08 Jun 2023 14:37:03 +0000
+
 libpam-ocra (1.5) unstable; urgency=low
 
   * Initial Release.
